force-app/main/default/objects/FSM_TMAPermit__c/FSM_TMAPermit__c.object-meta.xml
<CustomObject>
    <description>Created as part of user story #SFS-32</description>
    <label>TMA</label>
    <nameField>
        <displayFormat>TMAPER-{000000}</displayFormat>
        <label>TMA Permit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>