force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_ApplicableDesignations__c.field-meta.xml
<CustomField>
    <fullName>FSM_ApplicableDesignations__c</fullName>
    <description>Created as part of SFS-8679</description>
    <label>Applicable Designations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protected street</fullName>
            </value>
            <value>
                <fullName>Traffic sensitive</fullName>
            </value>
            <value>
                <fullName>Special engineering difficulty (SED)</fullName>
            </value>
            <value>
                <fullName>Street designations do not apply to works</fullName>
            </value>
            <value>
                <fullName>Proposed SED</fullName>
            </value>
            <value>
                <fullName>Level crossing safety zone</fullName>
            </value>
            <value>
                <fullName>Environmentally sensitive areas</fullName>
            </value>
            <value>
                <fullName>Structures (not SED)</fullName>
            </value>
            <value>
                <fullName>Special surfaces</fullName>
            </value>
            <value>
                <fullName>Pipelines and specialist cables</fullName>
            </value>
            <value>
                <fullName>Priority lanes</fullName>
            </value>
            <value>
                <fullName>Special construction needs</fullName>
            </value>
            <value>
                <fullName>Not Used (Changed from Section 85)</fullName>
            </value>
            <value>
                <fullName>Lane Rental (Changed from Strategic route)</fullName>
            </value>
            <value>
                <fullName>Streets subject to early notification of immediate activities</fullName>
            </value>
            <value>
                <fullName>Special events</fullName>
            </value>
            <value>
                <fullName>Parking bays and restrictions</fullName>
            </value>
            <value>
                <fullName>Pedestrian crossings and traffic signals</fullName>
            </value>
            <value>
                <fullName>Speed limits</fullName>
            </value>
            <value>
                <fullName>Transport authority critical apparatus</fullName>
            </value>
            <value>
                <fullName>Strategic Route</fullName>
            </value>
            <value>
                <fullName>Street Lighting</fullName>
            </value>
            <value>
                <fullName>Drainage and Flood Risk</fullName>
            </value>
            <value>
                <fullName>Unusual Traffic Layout</fullName>
            </value>
            <value>
                <fullName>Local Considerations</fullName>
            </value>
            <value>
                <fullName>Winter Maintenance Routes</fullName>
            </value>
            <value>
                <fullName>HGV Approved Routes</fullName>
            </value>
            <value>
                <fullName>Emergency Services Routes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>