force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_CarriagewayRestrict__c.field-meta.xml
<CustomField>
    <fullName>FSM_CarriagewayRestrict__c</fullName>
    <description>Created as part of SFS-8679</description>
    <label>Carriageway Restrict</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No carriageway incursion</fullName>
            </value>
            <value>
                <fullName>Some carriageway incursion</fullName>
            </value>
            <value>
                <fullName>Traffic control (stop/go boards)</fullName>
            </value>
            <value>
                <fullName>Traffic control (two-way signals)</fullName>
            </value>
            <value>
                <fullName>DO NOT USE (multi-way signals)</fullName>
            </value>
            <value>
                <fullName>Traffic control (give and take)</fullName>
            </value>
            <value>
                <fullName>Traffic control (priority working)</fullName>
            </value>
            <value>
                <fullName>Traffic control (convoy working)</fullName>
            </value>
            <value>
                <fullName>Lane closure</fullName>
            </value>
            <value>
                <fullName>Contra-flow</fullName>
            </value>
            <value>
                <fullName>Road closure</fullName>
            </value>
            <value>
                <fullName>Traffic control (three-way signals)</fullName>
            </value>
            <value>
                <fullName>Traffic control (four-way signals)</fullName>
            </value>
            <value>
                <fullName>Traffic control (five-way signals)</fullName>
            </value>
            <value>
                <fullName>Temporary Obstruction 15 minute delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>