force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_ChargeCategory__c.field-meta.xml
<CustomField>
    <fullName>FSM_ChargeCategory__c</fullName>
    <description>Created as part of SFS-8679</description>
    <label>Charge Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Works involving excavation (single promoter)</fullName>
            </value>
            <value>
                <fullName>Works involving excavation (collaborative working, primary promoter)</fullName>
            </value>
            <value>
                <fullName>Works in footpath or bridleway</fullName>
            </value>
            <value>
                <fullName>Works in a highway in relation to which a pedestrian planning order is in place</fullName>
            </value>
            <value>
                <fullName>Works in a highway whose use by vehicular traffic is prohibited by a traffic order (that applies at all times)</fullName>
            </value>
            <value>
                <fullName>Laying apparatus only (collaborative works, secondary promoter)</fullName>
            </value>
            <value>
                <fullName>Works for road purposes carried out on behalf of a highway authority</fullName>
            </value>
            <value>
                <fullName>Replacing poles, lamps, columns or signs in the same location</fullName>
            </value>
            <value>
                <fullName>Pole testing</fullName>
            </value>
            <value>
                <fullName>Repairing, resetting or replacing manhole or chamber covers or frames</fullName>
            </value>
            <value>
                <fullName>Works in non-traffic-sensitive streets that require opening of the highway, but not breaking it up</fullName>
            </value>
            <value>
                <fullName>Other works not involving excavation</fullName>
            </value>
            <value>
                <fullName>Culvert/Ditch/Tunnel Work – No Excavation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>