force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_ConstraintEnd__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConstraintEnd__c</fullName>
    <description>&quot;This property defines the constraint window
finish

Created as part of user story #SFS-32</description>
    <label>Constraint End</label>
    <type>DateTime</type>
</CustomField>