force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_ConstraintStart__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConstraintStart__c</fullName>
    <description>This property defines the constraint window
start

Created as part of user story #SFS-32</description>
    <label>Constraint Start</label>
    <type>DateTime</type>
</CustomField>