force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_EventType__c.field-meta.xml
<CustomField>
    <fullName>FSM_EventType__c</fullName>
    <description>sfi-1614</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0200</fullName>
                <label>Initial Notice</label>
            </value>
            <value>
                <fullName>0210</fullName>
                <label>PAA / Permit</label>
            </value>
            <value>
                <fullName>0300</fullName>
                <label>Activity Confirmation Notice</label>
            </value>
            <value>
                <fullName>0310</fullName>
                <label>Permit Application</label>
            </value>
            <value>
                <fullName>0400</fullName>
                <label>Actual Start Notice</label>
            </value>
            <value>
                <fullName>0600</fullName>
                <label>Work Stop Notice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>