force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_Excavation__c.field-meta.xml
<CustomField>
    <fullName>FSM_Excavation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFI-1178
Label updated as a part of SFS-4792</description>
    <label>Excavation Required?</label>
    <type>Checkbox</type>
</CustomField>