force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_ExcavationOccured__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExcavationOccured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFI-707
Label updated as part of SFS-4792</description>
    <label>Excavation Occured?</label>
    <type>Checkbox</type>
</CustomField>