force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_FootwayClosure__c.field-meta.xml
<CustomField>
    <fullName>FSM_FootwayClosure__c</fullName>
    <description>Created as part of SFS-8679</description>
    <label>Footway Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Alternative Route</fullName>
            </value>
            <value>
                <fullName>Yes - Walkway Provided</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>