force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_InitialNoticesenttoSAP__c.field-meta.xml
<CustomField>
    <fullName>FSM_InitialNoticesenttoSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Notice sent to SAP?</label>
    <type>Checkbox</type>
</CustomField>