force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_LatestStartDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_LatestStartDate__c</fullName>
    <description>Created as a part of SFS-4792
The latest date when the TMA Permit/ Notice can be started.</description>
    <label>Latest Start Date</label>
    <type>DateTime</type>
</CustomField>