force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_NoticeDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoticeDate__c</fullName>
    <description>Field type changed as a part of SFS-4133
Label updated as a part of SFS-4792
Date the TMAtrigger is due to be sent to the middleware (INT-008)</description>
    <label>Noticeable Date</label>
    <type>Date</type>
</CustomField>