force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_NoticeState__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoticeState__c</fullName>
    <description>Notice state for the notice
Created as part of user story #SFS-32
Status of notice delivery to SM/ SWM</description>
    <inlineHelpText>Notice state for the notice</inlineHelpText>
    <label>Noticeable Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NNSE</fullName>
                <label>Notice Not Sent</label>
            </value>
            <value>
                <fullName>NSEN</fullName>
                <label>Notice Sent</label>
            </value>
            <value>
                <fullName>NSIT</fullName>
                <label>Notice Sent Initial</label>
            </value>
            <value>
                <fullName>NTBS</fullName>
                <label>Notice To Be Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>