force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_NoticeType__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoticeType__c</fullName>
    <description>Type of a notice that is related to the operation
Created as part of user story #SFS-32
Category of the permit/notice required (ie. Minor, Major, etc.) based on legislation.</description>
    <label>Works Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Works_Category</valueSetName>
    </valueSet>
</CustomField>