force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_PermitEndDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_PermitEndDate__c</fullName>
    <description>SFS-2980
Label updated as per  SFS-4792
The Last day of the permit or notice</description>
    <label>Estimated End Date</label>
    <type>DateTime</type>
</CustomField>