force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_PermitNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_PermitNumber__c</fullName>
    <description>sfi-692
label updated as a part of SFS-4792
Reference for the TMA record</description>
    <label>Permit / Notice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>