force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_PermitStartDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_PermitStartDate__c</fullName>
    <description>SFS-2980
Label Updated as a part of SFS-4792
The estimated start date of the TMA Permit/ Notice can be started.</description>
    <label>Estimated Start Date</label>
    <type>DateTime</type>
</CustomField>