force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_ScheduledStartDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_ScheduledStartDate__c</fullName>
    <description>sfi-1807</description>
    <label>Scheduled Start Date</label>
    <type>DateTime</type>
</CustomField>