force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_SiteStopDateTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_SiteStopDateTime__c</fullName>
    <description>Created as part of SFS-4068</description>
    <label>Site Stop Date time</label>
    <type>DateTime</type>
</CustomField>