force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_TMAActualEnd__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAActualEnd__c</fullName>
    <description>Created as part of user story #SFS-32
Label updated as part of SFS-4792</description>
    <label>TMA Actual Stop</label>
    <type>DateTime</type>
</CustomField>