force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_TMAActualStart__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAActualStart__c</fullName>
    <description>Actual Start Date &amp; Time of TMA

Created as part of  SFS-32

Date/Time the permit/notice has been started by a fieldworker/ auto-triggered by the system.</description>
    <label>TMA Actual Start</label>
    <type>DateTime</type>
</CustomField>