force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_TMAApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAApprovalStatus__c</fullName>
    <description>Created as part of user story #SFS-32
Updated as part of SFI-1616
Updated as part of  SFS-4792
Approval Status of the TMA Permit/ Notice (eg. &quot;Created&quot;, &quot;PAA Requested, etc.)</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FSM_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRTD</fullName>
                <label>Created</label>
            </value>
            <value>
                <fullName>FPI</fullName>
                <label>Forward Planning</label>
            </value>
            <value>
                <fullName>API</fullName>
                <label>Advanced Planning</label>
            </value>
            <value>
                <fullName>RPA</fullName>
                <label>PAA Requested</label>
            </value>
            <value>
                <fullName>PADP</fullName>
                <label>PAA Deemed Approved</label>
            </value>
            <value>
                <fullName>PAA</fullName>
                <label>PAA Approved</label>
            </value>
            <value>
                <fullName>PLND</fullName>
                <label>Planned Work</label>
            </value>
            <value>
                <fullName>RP</fullName>
                <label>Permit Applied For</label>
            </value>
            <value>
                <fullName>PVAR</fullName>
                <label>Permit Variation Applied For</label>
            </value>
            <value>
                <fullName>PDP</fullName>
                <label>Permit Deemed Approved</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Permit Approved</label>
            </value>
            <value>
                <fullName>PRF</fullName>
                <label>Permit Refused</label>
            </value>
            <value>
                <fullName>PREV</fullName>
                <label>Permit Revoked (Prpsd Works)</label>
            </value>
            <value>
                <fullName>CANC</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>WIP</fullName>
                <label>Works in Progress</label>
            </value>
            <value>
                <fullName>COMP</fullName>
                <label>Work Complete</label>
            </value>
            <value>
                <fullName>PHCO</fullName>
                <label>Phase Complete</label>
            </value>
            <value>
                <fullName>PRRE</fullName>
                <label>Partial Reinst</label>
            </value>
            <value>
                <fullName>IREI</fullName>
                <label>INTR Reinstated</label>
            </value>
            <value>
                <fullName>PREI</fullName>
                <label>PERM Reinstated</label>
            </value>
            <value>
                <fullName>Any type except immediate</fullName>
                <isActive>false</isActive>
                <label>Any type except immediate</label>
            </value>
            <value>
                <fullName>Immediate Permit or Notice only</fullName>
                <isActive>false</isActive>
                <label>Immediate Permit or Notice only</label>
            </value>
            <value>
                <fullName>Interim Reinstated</fullName>
                <isActive>false</isActive>
                <label>Interim Reinstated</label>
            </value>
            <value>
                <fullName>Partial Reinstated</fullName>
                <isActive>false</isActive>
                <label>Partial Reinstated</label>
            </value>
            <value>
                <fullName>Permanent Reinstated</fullName>
                <isActive>false</isActive>
                <label>Permanent Reinstated</label>
            </value>
            <value>
                <fullName>Revoked</fullName>
                <isActive>false</isActive>
                <label>Revoked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>