force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_TMARagIndicator__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMARagIndicator__c</fullName>
    <formula>IF(FSM_PermitEndDate__c &lt; NOW(), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;),
IF(NOW()+ 1 &gt;= FSM_PermitEndDate__c, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Amber Flag&quot;),
IF(NOW()+ 1 &lt;= FSM_PermitEndDate__c,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green Flag&quot;), &quot;&quot;) ) )</formula>
    <label>TMA Rag Indicator</label>
    <type>Text</type>
</CustomField>