force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_TMARagIndicatorMobile__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMARagIndicatorMobile__c</fullName>
    <description>Created as part of the SFS-6685 for mobile user page layout due to limitation on mobile to show images (which is what the original field shows)</description>
    <formula>IF(
    FSM_PermitEndDate__c &lt; NOW(), 
    &quot;🟥&quot;, 
    IF(
        FSM_PermitEndDate__c &lt;= NOW() + 1, 
        &quot;🟨&quot;, 
        IF(
            FSM_PermitEndDate__c &gt; NOW() + 1, 
            &quot;🟩&quot;, 
            &quot;&quot;
        )
    )
)</formula>
    <label>TMA Rag Indicator</label>
    <type>Text</type>
</CustomField>