force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_TMASiteClear__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMASiteClear__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFI-707</description>
    <label>Site Clear</label>
    <type>Checkbox</type>
</CustomField>