force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_Type__c.field-meta.xml
<CustomField>
    <fullName>FSM_Type__c</fullName>
    <description>sfi-692
Updated as part of SFI-1616
TMA Type that is required (ie. Permit or Notice)</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRMT</fullName>
                <label>Permit</label>
            </value>
            <value>
                <fullName>NOTC</fullName>
                <label>Notice</label>
            </value>
            <value>
                <fullName>REV</fullName>
                <label>Permit Revoked (In Progress)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>