force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_WorkOrderRefID__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkOrderRefID__c</fullName>
    <description>sfi-1807</description>
    <label>WorkOrderRefID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>