force-app/main/default/objects/FSM_TMAPermit__c/fields/FSM_ZTNotification__c.field-meta.xml
<CustomField>
    <fullName>FSM_ZTNotification__c</fullName>
    <description>Created as a part of SFS-4792</description>
    <formula>FSM_ExternalId__c</formula>
    <label>ZT Notification Number</label>
    <type>Text</type>
</CustomField>