force-app/main/default/objects/FSM_TMAPermit__c/validationRules/FSM_EnsureSiteClearWhenActualStopNull.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_EnsureSiteClearWhenActualStopNull</fullName>
    <active>false</active>
    <description>Created as part of SFS-8738 .Validation rule to ensure user clears the FSM_TMASiteClear__c (ie. sets it to FALSE) if the FSM_TMAActualStop__c = NULL</description>
    <errorConditionFormula>AND(
    ISNULL( FSM_TMAActualEnd__c ),
    FSM_TMASiteClear__c = TRUE,
    NOT($Permission.FSM_SystemAdmin),
    NOT($Permission.FSM_Integration),
    NOT($Permission.FSM_Data_Migration_Admin)
)</errorConditionFormula>
    <errorDisplayField>FSM_TMASiteClear__c</errorDisplayField>
    <errorMessage>Please reset the Site Clear when clearing the TMA Actual End.</errorMessage>
</ValidationRule>