force-app/main/default/objects/FSM_TMAPermit__c/validationRules/FSM_EnsureSiteClearWhenTMAActualEndSet.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_EnsureSiteClearWhenTMAActualEndSet</fullName>
    <active>true</active>
    <description>SFS-8737</description>
    <errorConditionFormula>AND(
    NOT(ISNULL( FSM_TMAActualEnd__c)),
    NOT( FSM_TMASiteClear__c ),
    NOT($Permission.FSM_SystemAdmin),
    NOT($Permission.FSM_Integration),
    NOT($Permission.FSM_Data_Migration_Admin)
)</errorConditionFormula>
    <errorDisplayField>FSM_TMAActualEnd__c</errorDisplayField>
    <errorMessage>Please populate the Site Clear when setting the TMA Actual End</errorMessage>
</ValidationRule>