force-app/main/default/objects/FSM_TMAPermit__c/validationRules/FSM_PreventFutureDateTimeTMAStartStop.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_PreventFutureDateTimeTMAStartStop</fullName>
    <active>true</active>
    <description>SFS-8737</description>
    <errorConditionFormula>AND
(
   OR
      (
          FSM_TMAActualStart__c  &gt;  NOW(),
          FSM_TMAActualEnd__c    &gt;  NOW()   
      ),
   NOT($Permission.FSM_SystemAdmin),
   NOT($Permission.FSM_Integration),
   NOT($Permission.FSM_Data_Migration_Admin)
)</errorConditionFormula>
    <errorMessage>Future date/time is not allowed</errorMessage>
</ValidationRule>