force-app/main/default/objects/FSM_TMAPermit__c/validationRules/FSM_RestrictTMAStartStop.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_RestrictTMAStartStop</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        AND(
            ISCHANGED(FSM_TMAActualStart__c),
            NOT(ISBLANK(PRIORVALUE(FSM_TMAActualStart__c)))
        ),
        AND(
            ISCHANGED(FSM_TMAActualEnd__c),
            NOT(ISBLANK(PRIORVALUE(FSM_TMAActualEnd__c)))
        ),
        AND(
            ISCHANGED(FSM_TMASiteClear__c),
            PRIORVALUE(FSM_TMASiteClear__c)
        ),
        AND(
            ISCHANGED(FSM_ExcavationOccured__c),
            PRIORVALUE(FSM_ExcavationOccured__c)
        )
    ),
    NOT($Permission.FSM_SystemAdmin),
    NOT($Permission.FSM_Integration),
    NOT($Permission.FSM_Data_Migration_Admin)
)</errorConditionFormula>
    <errorMessage>TMA Start/Stop, Site Clear, Excavation occurred have already been set and cannot be modified</errorMessage>
</ValidationRule>